added a img tage and new divs

--- a/index.html
+++ b/index.html
@@ -6,25 +6,69 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Document</title>
             <link rel="stylesheet" href="style.css">
+            <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
             <div class="container">
-                        <div class="topDiv">
-                                    <img src="" alt="">
-                        </div>
-                        <nav>
-                                    <nav class="leftSide"></nav>
-                                    <div class="rightSide">
-                                                <a href="#">Multi-Platform</a>
-                                                <a href="#">Development</a>
-                                                <a href="#">Ecosystem</a>
-                                                <a href="#">Showcase</a>
-                                                <a href="#">Docs</a>
-                                                <span>icon</span>
-                                                <button class=" btn1">Get started</button>
+                        <div class="topSticky">
+                                    <div class="topDiv">
+                                                <p>Flutter 3.24 and Dart 3.5 are here. Read the blog.→</p>
                                     </div>
-                        </nav>
+                                    <nav>
+                                                <div class="leftSide">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/6a07d8a62f4308d2b854.svg"
+                                                                        alt="">
+                                                </div>
+                                                <div class="rightSide">
+                                                            <div>
+                                                                        <a href="#">Multi-Platform</a>
+                                                                        <a href="#">Development</a>
+                                                                        <a href="#">Ecosystem</a>
+                                                                        <a href="#">Showcase</a>
+                                                                        <a href="#">Docs</a>
+                                                            </div>
+                                                            <span>
+                                                                        <i class="ri-search-line"></i>
+                                                            </span>
+                                                            <button class=" btn1">Get started</button>
+                                                </div>
+                                    </nav>
+                        </div>
+
+
+                        <div class="content content1 ">
+                                    <div>
+                                                <div class="leftContent">
+                                                            <h1>A strong ecosystem, powered by open source</h1>
+                                                </div>
+                                                <div class="rightContent">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/7c6e6c7e94f4f0689ae0.png            "
+                                                                        alt="">
+                                                </div>
+                                    </div>
+                                    <h2>From packages and plugins to friendly developers, find all of the
+                                                resources you need to be successful with Flutter.</h2>
+                        </div>
+                        <div class="conten content2">
+                                    <div class="box box1">
+                                                <h3>Community</h3>
+                                                <p>Join developers around the world who are building with flutter.</p>
+                                                <img src="https://storage.googleapis.com/cms-storage-bucket/e90928160cc43359f8f6.jpg" alt="">
+                                    </div>
+                                    <div class="box box2">
+                                                <h3>Events</h3>
+                                                <p>Learn about the latest Flutter developments at our global events.</p>
+                                                <img src="https://storage.googleapis.com/cms-storage-bucket/bb151b932844205ac418.jpg" alt="">
+                                    </div>
+                                    <div class="box box3">
+                                                <h3>Packages</h3>
+                                                <p>Find open source packages to help you build powerful Flutter apps.
+                                                </p>
+                                                <img src="https://storage.googleapis.com/cms-storage-bucket/aa60c7e0fff5f6fdbda7.png" alt="">
+                                    </div>
+                        </div>
+                        <div class="content"></div>
             </div>
 </body>
 
