added a another file of css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Document</title>
             <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="responsive.css">
             <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
@@ -33,10 +34,10 @@
                                                             </span>
                                                             <button class=" btn1">Get started</button>
                                                 </div>
+
+                                                <i class="ri-menu-fill"></i>
                                     </nav>
                         </div>
-
-
                         <div class="content content1 ">
                                     <div>
                                                 <div class="leftContent">
@@ -54,21 +55,50 @@
                                     <div class="box box1">
                                                 <h3>Community</h3>
                                                 <p>Join developers around the world who are building with flutter.</p>
-                                                <img src="https://storage.googleapis.com/cms-storage-bucket/e90928160cc43359f8f6.jpg" alt="">
+                                                <img src="https://storage.googleapis.com/cms-storage-bucket/e90928160cc43359f8f6.jpg"
+                                                            alt="">
                                     </div>
                                     <div class="box box2">
                                                 <h3>Events</h3>
                                                 <p>Learn about the latest Flutter developments at our global events.</p>
-                                                <img src="https://storage.googleapis.com/cms-storage-bucket/bb151b932844205ac418.jpg" alt="">
+                                                <img src="https://storage.googleapis.com/cms-storage-bucket/bb151b932844205ac418.jpg"
+                                                            alt="">
                                     </div>
                                     <div class="box box3">
                                                 <h3>Packages</h3>
                                                 <p>Find open source packages to help you build powerful Flutter apps.
                                                 </p>
-                                                <img src="https://storage.googleapis.com/cms-storage-bucket/aa60c7e0fff5f6fdbda7.png" alt="">
+                                                <img src="https://storage.googleapis.com/cms-storage-bucket/aa60c7e0fff5f6fdbda7.png"
+                                                            alt="">
                                     </div>
                         </div>
-                        <div class="content"></div>
+                        <div class="content  content3">
+                                    <div class="content3Inside">
+                                                <div class="content3LeftSide">
+
+                                                            <div class="hgroup">
+                                                                        <h4>Community</h4>
+                                                                        <h3>Get involved</h3>
+                                                            </div>
+                                                            <p>
+                                                                        Connect with Flutter developers around the
+                                                                        world, find answers, and contribute to the
+                                                                        framework in our welcoming
+                                                                        community spaces.
+                                                            </p>
+
+                                                            <div class="btnss">
+                                                                        <button>Join the community</button>
+                                                                        <button>More about Flutter culture <i
+                                                                                                class="ri-arrow-right-line"></i></button>
+                                                            </div>
+                                                </div>
+                                                <div class="content3RightSide">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/c6d00c92ea8465787105.png"
+                                                                        alt="">
+                                                </div>
+                                    </div>
+                        </div>
             </div>
 </body>
 
