--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     <h2>From packages and plugins to friendly developers, find all of the
                                                 resources you need to be successful with Flutter.</h2>
                         </div>
-                        <div class="conten content2">
+                        <div class=" content2">
                                     <div class="box box1">
                                                 <h3>Community</h3>
                                                 <p>Join developers around the world who are building with flutter.</p>
@@ -72,7 +72,7 @@
                                                             alt="">
                                     </div>
                         </div>
-                        <div class="content  content3">
+                        <div class="  content3">
                                     <div class="content3Inside">
                                                 <div class="content3LeftSide">
 
@@ -101,8 +101,148 @@
                         </div>
 
 
-                        <div class="content content4">
-                                    
+                        <div class=" content4">
+                                    <div>
+                                                <div class="content4Left">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/5ed8ae4a516b4433fc75.png"
+                                                                        alt="">
+                                                </div>
+                                                <div class="content4Right">
+                                                            <h4>Consultants</h4>
+                                                            <h3>Find a Flutter consultant</h3>
+                                                            <p>Find trusted Flutter partners. We vet the partners listed
+                                                                        in the
+                                                                        directory to verify their record of successful
+                                                                        Flutter
+                                                                        projects, a sufficient number of skilled
+                                                                        developers on
+                                                                        staff, and their commitment to growing the
+                                                                        Flutter
+                                                                        community.</p>
+
+                                                            <button>Find Consultance</button>
+                                                </div>
+                                    </div>
+                        </div>
+
+                        <div class=" content5">
+                                    <div>
+                                                <div class="content4Left">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/6f183a9db312d0e1b535.png"
+                                                                        alt="">
+                                                </div>
+                                                <div class="content4Right">
+                                                            <h4>Events</h4>
+                                                            <h3>Everyone is invited</h3>
+                                                            <p>View upcoming events and see all of the latest talks and
+                                                                        announcements from previous events. </p>
+
+                                                            <button>See events</button>
+                                                </div>
+                                    </div>
+                        </div>
+
+
+
+
+                        <div class=" content6">
+                                    <div>
+                                                <div class="content4Left">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/9e16544e02c158492997.png"
+                                                                        alt="">
+                                                </div>
+                                                <div class="content4Right">
+                                                            <h4>Packages & Integrations</h4>
+                                                            <h3>Find what you need on pub.dev</h3>
+                                                            <p>Browse over 20,000 packages, plugins, and integrations
+                                                                        for custom UI components, authentication
+                                                                        solutions, state
+                                                                        management libraries, and more. </p>
+
+                                                            <button>Explore packages</button>
+                                                </div>
+                                    </div>
+                        </div>
+
+
+                        <div class="content7">
+                                    <div class="content7Content">
+                                                <div class="content7Left">
+                                                            <h3>Get started</h3>
+                                                            <p>Instant access to the power of the Flutter framework</p>
+                                                            <div>
+                                                                        <button>Install</button>
+                                                                        <a href="#">Read the docs <i
+                                                                                                class="ri-arrow-right-line"></i></a>
+                                                            </div>
+                                                </div>
+                                                <div class="content7Right">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/72521e62275b24d3c37d.png"
+                                                                        alt="">
+                                                </div>
+                                    </div>
+                        </div>
+
+
+                        <div class="content8">
+                                    <div class="cont">
+                                                <div class="content8Left">
+                                                            <img src="https://storage.googleapis.com/cms-storage-bucket/6a07d8a62f4308d2b854.svg"
+                                                                        alt="">
+
+                                                            <div>
+                                                                        <i class="ri-youtube-fill"></i>
+                                                                        <i class="ri-twitter-x-fill"></i>
+                                                                        <i class="ri-github-fill"></i>
+                                                                        <i class="ri-medium-fill"></i>
+                                                                        <i class="ri-mastodon-fill"></i>
+                                                                        <i class="ri-linkedin-box-fill"></i>
+                                                            </div>
+                                                </div>
+                                                <div class="content8Right">
+                                                            <div>
+                                                                        <li>About Flutter</li>
+                                                                        <div>
+                                                                                    <a href="#">Careers</a>
+                                                                                    <a href="#">News</a>
+                                                                                    <a href="#">Brand</a>
+                                                                                    <a href="#">Culture</a>
+                                                                        </div>
+                                                            </div>
+                                                            <div>
+                                                                        <li>Learn Flutter</li>
+                                                                        <div>
+                                                                                    <a href="#">Learning Journey</a>
+                                                                                    <a href="#">Codelabs</a>
+                                                                                    <a href="#">Samples</a>
+                                                                                    <a href="#">Cookbook</a>
+                                                                        </div>
+                                                            </div>
+                                                            <div>
+                                                                        <li>Multi-Platform </li>
+                                                                        <div>
+                                                                                    <a href="#">Mobile</a>
+                                                                                    <a href="#">Web</a>
+                                                                                    <a href="#">Desktop</a>
+                                                                                    <a href="#">Embedded</a>
+                                                                                    <a href="#">iOS</a>
+                                                                        </div>
+                                                            </div>
+                                                </div>
+                                    </div>
+
+
+                                    <div class="cont2">
+                                                <p>Except as otherwise noted, this work is licensed under a Creative
+                                                            Commons Attribution 4.0 International License, and
+                                                            code samples are licensed under the BSD License.</p>
+
+                                                <div>
+                                                            <a href="#">Terms</a>
+                                                            <a href="#">Privacy</a>
+                                                            <a href="#">Security</a>
+                                                </div>
+                                    </div>
                         </div>
             </div>
 </body>
